--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "comic-book-collection-management",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js",
+    "build": "node app.js"
   },
   "keywords": [],
   "author": "",
