--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "build": "node app.js"
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
